samples/_failures_safe/1761272130_9b07ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8daebe1f.c: In function ‘main’:
./samples/SAFE/__tmp_8daebe1f.c:165:12: error: missing terminating " character
  165 |     printf(" | Total processed: %u
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8daebe1f.c:165:5: error: expected expression at end of input
  165 |     printf(" | Total processed: %u
      |     ^~~~~~
./samples/SAFE/__tmp_8daebe1f.c:165:5: error: expected declaration or statement at end of input
